@@ -1,12 +1,7 @@
 {
-  "count": 64,
-  "uniques": 21,
+  "count": 55,
+  "uniques": 19,
   "views": [
-    {
-      "timestamp": "2023-10-01T00:00:00Z",
-      "count": 9,
-      "uniques": 2
-    },
     {
       "timestamp": "2023-10-02T00:00:00Z",
       "count": 26,
