@@ -1,3 +1,12 @@
+2023-10-16T00:43:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6527541193 # 1990
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-16
+* notice: last 14d: unq all: 19 55
+* notice: prev accum: outdated-unq outdated-all / unq all: 612 1780 / 633 1844
+* notice: next accum: outdated-unq outdated-all / unq all: 614 1789 / 633 1844
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-10-01] / []
+
 2023-10-14T16:10:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6518678581 # 1986
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-14
